--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="무료 로또 번호 추첨기 - 행운의 번호를 뽑아보세요!">
     <link rel="stylesheet" href="css/style.css">
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_PUBLISHER_ID" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8613796246656845"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -18,11 +19,11 @@
 
         <main>
             <div class="ad-container">
-                <!-- 광고 단위 1 -->
+                <!-- Lotto_Display_1 -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
-                     data-ad-slot="YOUR_AD_SLOT_ID"
+                     data-ad-client="ca-pub-8613796246656845"
+                     data-ad-slot="7924837452"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
                 <script>
@@ -45,18 +46,32 @@
                     <button id="resetBtn" class="secondary-button">초기화</button>
                 </div>
 
+                <!-- 모바일용 중간 광고 -->
+                <div class="ad-container mobile-only">
+                    <!-- Lotto_Display_1 -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-8613796246656845"
+                         data-ad-slot="7924837452"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+
                 <div class="history">
                     <h2>이전 추첨 번호</h2>
                     <div id="historyList"></div>
                 </div>
             </section>
 
-            <div class="ad-container">
-                <!-- 광고 단위 2 -->
+            <div class="ad-container desktop-only">
+                <!-- Lotto_Display_1 -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
-                     data-ad-slot="YOUR_AD_SLOT_ID_2"
+                     data-ad-client="ca-pub-8613796246656845"
+                     data-ad-slot="7924837452"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
                 <script>
